tests/neg/i4934.scala
object Test {
  val a = ""); // error

  val b = 1;

  val c = b); // error
}
